<resources>
    <string name="app_name">Work out tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_number">00010174</string>
    <string name="welcome_title_1">Plan your day</string>
    <string name="welcome_subtitle_1">Write all your daily routine to this app</string>
    <string name="welcome_title_2">Schedule your day</string>
    <string name="welcome_subtitle_2">You can set day and time in this app</string>
    <string name="welcome_title_3">You can start</string>
    <string name="welcome_subtitle_3">Press Start Button below and relax</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="program">Programs</string>
    <string name="habits">Habits</string>
    <string name="search">Search here…</string>
    <string name="add_program">Add program</string>
    <string name="program_name">Program name</string>
    <string name="started_time">Started time</string>
    <string name="finished_time">Finished time</string>
    <string name="number_of_times">Number of times</string>
    <string name="additional_notes">Additional notes</string>
    <string name="choose_program_name">Enter Program name</string>
    <string name="choose_started_time">Enter Started time</string>
    <string name="choose_finished_time">Enter Finished time</string>
    <string name="choose_number_of_times">Enter Number of times</string>
    <string name="create">Create</string>
    <string name="choose_experience">Choose experience</string>
    <string name="experience_n">Experience: %1$s</string>
    <string name="n_times">%1$d times</string>
    <string name="start_finish">%1$s - %2$s</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="about_program">About program</string>
    <string name="edit_program">Edit program</string>
    <string name="save">Save</string>
    <string name="this_app_is_created_to_get_full_mark">This app is created to get full mark 😊</string>
    <string name="about_app">About app</string>
    <string name="quit">Quit</string>
    <string name="news">News</string>
    <string name="about_app_text">With This app you can save your daily routine and your exercises. It can save your data in phone\'s memory. You can use with-out internet. Only to access news you must have internet.</string>
    <string name="created_by_00010174">Created by 00010174</string>
    <string name="more_information">More information…</string>
    <string name="this_page_is_not_completed_yet">This page is not completed yet.</string>
    <string-array name="experience">
        <item>Experience…</item>
        <item>Excellent</item>
        <item>Good</item>
        <item>Not very bad</item>
        <item>Bad</item>
        <item>Awful</item>
    </string-array>

</resources>