<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TEXT_LARGE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_app" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TEXT_LARGE"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:text="@string/about_app_text"
        android:textColor="@color/red" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TEXT_MEDIUM"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="16dp"
        android:text="@string/created_by_00010174"
        android:textColor="@color/main_color" />

</FrameLayout>